Footer: fixed white space on bottom

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -9,6 +9,7 @@
 footer {
     overflow-x: hidden;
     background: $cf-lightGray;
+    position: absolute; // FIXME: why?
 
     section { width: 100vw; }
 
